Revert "Kinda fix tables on mobile"
This reverts commit 696a01fcb7189b2916bee35ec9c30a21612869f6.

--- a/www/assets/style-white.css
+++ b/www/assets/style-white.css
@@ -138,7 +138,6 @@ body {
 .content table {
     width: 100%;
     border-collapse: collapse;
-    table-layout: fixed;
 }
 
 .content table th,
