--- a/www/assets/style.css
+++ b/www/assets/style.css
@@ -141,7 +141,6 @@ body {
 .content table {
     width: 100%;
     border-collapse: collapse;
-    table-layout: fixed;
 }
 
 .content table th,
